完成头部，底部非路由组件

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,10 +1,17 @@
+<!--
+ * @Author: fuyou-data 1639318926@qq.com
+ * @Date: 2023-06-07 23:33:33
+ * @LastEditors: fuyou-data 1639318926@qq.com
+ * @LastEditTime: 2023-06-08 01:21:33
+ * @FilePath: \shangpinhui_vue2\app\public\index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
